assets/css/dropbox.css
/* ... */
/*
 * #footer content 
 */

/*  Footer navbars */
#footer .navbar li {
	padding-bottom: 6px;
	color: #4C545A;
}
#footer .navbar li:first-child {
	font-weight: 700;
}
#footer .navbar li a:hover {
	text-decoration: underline;
}
.region-selector {
	float: right;
}
.region-selector:after {
	border: 0.5em solid transparent;
	border-bottom-color: inherit;
	content: "";
	display: inline-block;
	margin-left: 0.5em;
}
.language-link {
	text-decoration: none;
}
.language-link:hover {
	text-decoration: underline;
}


/*
 * Media Queries for responsive view
 */ 
@media(max-width: 1049px)
{
	.row .col-1,
	.row .col-2,
	.row .col-3,
	.row .col-4,
	.row .col-5,
	.row .col-6,
	.row .col-7,
	.row .col-8,
	.row .col-9,
	.row .col-10,
	.row .col-11,
	.row .col-12 {
		margin: 0 auto;
		max-width: 85%;
	}
	#icon-row {
		text-align: center;
	}
	#page-menu {
		display: none;
	}
	.carousel .image {
		max-width: 100%;
		max-height: 100%;
		width: auto;
		height: auto;
	}
	.carousel .left-arrow,
	.carousel .right-arrow {
		display: none;
	}
	.carousel .dot {
		width: 22px;
		height: 22px;
		margin: 20px;
	}
	.video-title {
		max-width: 360px;
  		margin: 0 auto;
	}
	#footer {
		margin: 0 auto;
		max-width: 85%;
	}	
}
@media(max-width: 800px)
{
	.row .col-1,
	.row .col-2,
	.row .col-3,
	.row .col-4,
	.row .col-5,
	.row .col-6,
	.row .col-7,
	.row .col-8,
	.row .col-9,
	.row .col-10,
	.row .col-11,
	.row .col-12 {
		max-width: 100%;
	}
	#header .row,
	#why-dropbox {
		padding: 0 10%;
	}
}
@media(max-width: 550px)
{
	#header h1 {
		font-size: 32px;
	}
	#what-dropbox h2 {
		margin-left: 5%;
		margin-right: 5%;
	}
	.carousel .dot {
		width: 20px;
		height: 20px;
		margin: 18px;
	}	
}
@media(min-width: 1050px)
{
	#header .dropbox-icon {
		width: 37px;
		height: 34px;
	}

	/* 12 (55px) column grid with (30px) gutters */
	.row {
		margin: 0 auto;
		max-width: 1050px;
	}
	.row:before, 
	.row:after {
		content: " "; 
		display: table; 
		clear:both;
	}
	.row .col-12 {
		margin-left: 15px;
		margin-right: 15px;
	}
	.row [class^="col-"]:first-child, 
	.row [class*="col-"]:first-child {
		margin-left: 15px;
	}
	.row [class^="col-"]:last-child, 
	.row [class*="col-"]:last-child {
		margin-right: 15px;
	}
	.row .col-1,
	.row .col-2,
	.row .col-3,
	.row .col-4,
	.row .col-5,
	.row .col-6,
	.row .col-7,
	.row .col-8,
	.row .col-9,
	.row .col-10,
	.row .col-11,
	.row .col-12 {
		position: relative;
		min-height: 1px;
		padding-right: 15px;
		padding-left: 15px;
		float: left;
	}
	.row .col-1 {
		width: 85px;
	}
	.row .col-2 {
		width: 170px;
	}
	.row .col-3 {
		width: 255px;
	}
	.row .col-4 {
		width: 340px;
	}
	.row .col-5 {
		width: 425px;
	}
	.row .col-6 {
		width: 510px;
	}
	.row .col-7 {
		width: 595px;
	}
	.row .col-8 {
		width: 680px;
	}
	.row .col-9 {
		width: 765px;
	}
	.row .col-10 {
		width: 850px;
	}
	.row .col-11 {
		width: 935px;
	}
	.row .col-12 {
		width: 1020px;
	}
}

/*
 * Keyframes 
 */
@-moz-keyframes scaleUpBounce {
	0%   {
		opacity: 0; 
		height: 50%;
		-moz-transform: translateX(-50%);
	    -ms-transform: translateX(-50%);
	    -webkit-transform: translateX(-50%);
	    transform: translateX(-50%);
	    -webkit-filter: blur(15px);
	    filter: blur(15px);
	}
    90%  {
    	opacity: 1; 
    	-webkit-filter: blur(0);
    	filter: blur(0);
    	height: 100%;
    }
    95%  {
    	height: 110%;
    }
    100% {
	    -moz-transform: translateX(0%);
    	-ms-transform: translateX(0%);
    	-webkit-transform: translateX(0%);
    	transform: translateX(0%);
    	opacity: 1;
    	height: 100%;
    }
}
@-webkit-keyframes scaleUpBounce {
	0%   {
		opacity: 0; 
		height: 50%;
		-moz-transform: translateX(-50%);
	    -ms-transform: translateX(-50%);
	    -webkit-transform: translateX(-50%);
	    transform: translateX(-50%);
	    -webkit-filter: blur(15px);
	    filter: blur(15px);
	}
    90%  {
    	opacity: 1; 
    	-webkit-filter: blur(0);
    	filter: blur(0);
    	height: 100%;
    }
    95%  {
    	height: 110%;
    }
    100% {
	    -moz-transform: translateX(0%);
    	-ms-transform: translateX(0%);
    	-webkit-transform: translateX(0%);
    	transform: translateX(0%);
    	opacity: 1;
    	height: 100%;
    }
}
@keyframes scaleUpBounce {
	0%   {
		opacity: 0; 
		height: 50%;
		-moz-transform: translateX(-50%);
	    -ms-transform: translateX(-50%);
	    -webkit-transform: translateX(-50%);
	    transform: translateX(-50%);
	    -webkit-filter: blur(15px);
	    filter: blur(15px);
	}
    90%  {
    	opacity: 1; 
    	-webkit-filter: blur(0);
    	filter: blur(0);
    	height: 100%;
    }
    95%  {
    	height: 110%;
    }
    100% {
	    -moz-transform: translateX(0%);
    	-ms-transform: translateX(0%);
    	-webkit-transform: translateX(0%);
    	transform: translateX(0%);
    	opacity: 1;
    	height: 100%;
    }
}

@-moz-keyframes fadeInUpward {
	0% {
		opacity: 0;
		background-position: center 500px;
	}
	100% {
		opacity: 1;
		background-position: center -86px;
	}
}

@-webkit-keyframes fadeInUpward {
	0% {
		opacity: 0;
		background-position: center 500px;
	}
	100% {
		opacity: 1;
		background-position: center -86px;
	}
}

@keyframes fadeInUpward {
	0% {
		opacity: 0;
		background-position: center 500px;
	}
	100% {
		opacity: 1;
		background-position: center -86px;
	}
}

